@@ -5,42 +5,10 @@
 - 20220072 - Đoàn Tiến Dũng
 - 20225996 - Phạm Trường Sang
 - 20226067 - Đinh Xuân Toàn
-- 2022xxxx -
+- 2022xxxx - Nguyễn Bách
 
-## Lưu ý
 
-Tạo nhánh mới trước khi viết và đẩy code lên. Ex: `tên\task`
-
-Check task trên [Trello](https://trello.com/b/PDJhYNcV/oop-project), khi đẩy code lên thì tạo pull request.
-
-Đề xuất thì viết vào issue.
-
-**Tuyệt đối không được đẩy code lên nhánh master.**
-
-Có thể đọc qua bài để hiểu thêm về pr: https://viblo.asia/p/tao-pull-request-dung-cach-bWrZnwkrlxw
-
-Hiểu hơn về conflict để tránh khi làm việc: https://topdev.vn/blog/cach-xu-ly-conflict-khi-git-merge
-
-## Cấu hình
-
-Với ai dùng vscode thì tạo file `launch.json` ở trong folder `.vscode`
-
-Nhớ sửa lại `<JavaFX_lib_path>`. Ví dụ: `path/to/java/javafx-sdk-22.0.1/lib`
-
-```launch.json
-{
-    "version": "0.2.0",
-    "configurations": [
-        {
-            "type": "java",
-            "name": "Launch App",
-            "request": "launch",
-            "mainClass": "Main",
-            "vmArgs": "--module-path <JavaFX_lib_path> --add-modules javafx.controls,javafx.fxml",
-        }
-    ]
-}
-```
+## Cấu hình JavaFX
 
 Đọc thêm ở https://openjfx.io/openjfx-docs/#introduction
 
@@ -48,7 +16,8 @@ Nhớ sửa lại `<JavaFX_lib_path>`. Ví dụ: `path/to/java/javafx-sdk-22.0.1
 
 ```
 Electrical circuit simulator
-├── src
+├── UML
+└── src
     ├── app
     ├── controller
     ├── fxml
@@ -57,14 +26,14 @@ Electrical circuit simulator
 
 ```
 
+`UML`: class diagram + use case diagram
+
 `/src`: source code của dự án
 
 `/controller`: xử lí event + tương tác với giao diện
 
 `/fxml`: các file fxml để hiển thị giao diện
 
-`/models`: các class của phần tử mạch điện
-
-`/resources`: hình ảnh,...
+`/models`: class của phần tử mạch điện
 
 `/app`: class chính để chạy code
